# nomad-sintering

./: .cruft.json  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  normalized.archive.json  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_sintering/schema_packages/: __init__.py  sintering.py
src/nomada_sintering/schema_packages/: __init__.py  schema_package.py  sintering.py
src/sintering/schema_packages/: __init__.py  schema_package.py
tests/data/: test.archive.yaml  test_sintering.archive.yaml
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
